--- a/model_chat/templates/list_chats/duo_users_page.html
+++ b/model_chat/templates/list_chats/duo_users_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Users List</title>
+    <title>Lista de Usuários</title>
     <style>
         .user-list {
             list-style-type: none;
@@ -27,9 +27,14 @@
 </head>
 <body class="bg-light">
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Users List</h1>
-        
+        <h1 class="text-center mb-4">Lista de Usuários</h1>
+
         <p class="text-center">Logged in as: <strong>{{ logged_user.name }}</strong></p>  <!-- Nome do usuário logado -->
+        
+        <!-- Botão para redirecionar para a lista de grupos de chat -->
+        <div class="text-center mb-4">
+            <a href="{% url 'groups_list' %}" class="btn btn-primary">Ir para Grupos</a>
+        </div>
 
         <ul class="user-list list-group">
             {% for user in users %}
