--- a/model_chat/templates/login_page.html
+++ b/model_chat/templates/login_page.html
@@ -12,12 +12,18 @@
             {% csrf_token %}
             <h2 class="text-center mb-4">Bem-vindo ao Chat</h2>
             <div class="form-group">
-                <label for="{{ form.name.id_for_label }}">Nome</label>
-                <input type="text" name="{{ form.name.name }}" id="{{ form.name.id_for_label }}" class="form-control" required>
+                <label for="{{ form.username.id_for_label }}">Nome de Usuário</label>
+                <input type="text" name="username" id="{{ form.username.id_for_label }}" class="form-control" required>
+                {% if form.username.errors %}
+                    <div class="text-danger">{{ form.username.errors }}</div>
+                {% endif %}
             </div>
             <div class="form-group">
                 <label for="{{ form.password.id_for_label }}">Senha</label>
-                <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="form-control" required>
+                <input type="password" name="password" id="{{ form.password.id_for_label }}" class="form-control" required>
+                {% if form.password.errors %}
+                    <div class="text-danger">{{ form.password.errors }}</div>
+                {% endif %}
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-primary btn-block">Entrar</button>
