--- a/model_chat/templates/list_chats/groups_page.html
+++ b/model_chat/templates/list_chats/groups_page.html
@@ -32,7 +32,7 @@
         <p class="text-center">Logado como: <strong>{{ logged_user.name }}</strong></p>  <!-- Nome do usuário logado -->
 
         <!-- Botão para ir para a página de criação de grupos -->
-        <div class="text-center mt-4">
+        <div class="text-center mb-4">
             <a href="{% url 'create_group_chat' %}" class="btn btn-primary">Criar Novo Grupo</a>
         </div>
 
