--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Chat with {{ target_user.code }}</h1>
+        <h1 class="text-center">Chat com: {{ target_user.name }}</h1>
 
         <div id="chat-log" class="mb-3 p-2">
             {% for message in messages %}
