--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat with {{ target_user.code }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- Para clipe de papel -->
     <style>
         #chat-log {
             border: 1px solid #ddd;
