--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -173,6 +175,6 @@
         function handleSocketClose(event) {
             console.error('Chat socket closed unexpectedly');
         }
-    </script> 
+    </script>
 </body>
 </html>
