--- a/model_chat/templates/chats/group_chat_page.html
+++ b/model_chat/templates/chats/group_chat_page.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,5 +70,7 @@
             messageInputDom.value = '';
         };
     </script>
+
+    <!-- <script src="{% static 'js/group_chat.js' %}"></script> -->
 </body>
 </html>
