--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -52,9 +52,9 @@
             <input type="file" id="chat-file-input" class="form-control-file" accept="image/*,video/*,application/pdf">
             <input type="text" id="chat-message-input" class="form-control" autocomplete="off" placeholder="Type your message...">
             <div class="input-group-append">
-                <button class="btn btn-secondary" id="send-file"> <i class="fas fa-paperclip"></i> <!-- Ícone de clipe de papel -->
-                </button>
-                <button id="send-message" class="btn btn-primary">Send</button>
+                <button class="btn btn-secondary" id="send-file"><i class="fas fa-paperclip"></i><!-- Ícone de clipe de papel --></button>
+                <button class="btn btn-secondary" id="send-file"><i class="fas fa-paperclip"></i><!-- Ícone de clipe de papel --></button>
+                <button id="send-message" class="btn btn-primary"><i class="fas fa-paper-plane"></i><!-- Ícone de avião --></button>
             </div>
         </div>
     </div>
